Add configurable field presets for annotations

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -337,16 +337,34 @@
           </label>
           <label class="field">
             <span class="field-label">{{ 'annotation.fields.type.label' | t }}</span>
-            <select [(ngModel)]="p.field.type">
+            <select [(ngModel)]="p.field.type" (ngModelChange)="onFieldTypeChange('preview', $event)">
               <option value="text">{{ 'annotation.fields.type.options.text' | t }}</option>
               <option value="check">{{ 'annotation.fields.type.options.check' | t }}</option>
               <option value="radio">{{ 'annotation.fields.type.options.radio' | t }}</option>
               <option value="number">{{ 'annotation.fields.type.options.number' | t }}</option>
             </select>
           </label>
+          <label class="field" *ngIf="showPresetSelector(p.field.type)">
+            <span class="field-label">{{ 'annotation.fields.preset.label' | t }}</span>
+            <select [(ngModel)]="p.field.presetId" (ngModelChange)="onPresetChange('preview', $event)">
+              <option [ngValue]="null">{{ 'annotation.fields.preset.custom' | t }}</option>
+              <option *ngFor="let preset of getPresetsForType(p.field.type)" [ngValue]="preset.id">
+                {{ preset.labelKey | t }}
+              </option>
+            </select>
+          </label>
+          <small class="field-hint"
+            *ngIf="getPresetDescriptionKey(p.field.type, p.field.presetId) as presetDescription">
+            {{ presetDescription | t }}
+          </small>
           <label class="field">
             <span class="field-label">{{ 'annotation.fields.value.label' | t }}</span>
             <input type="text" [(ngModel)]="p.field.value" [placeholder]="'annotation.fields.value.placeholder' | t" />
+          </label>
+          <label class="field" *ngIf="p.field.type === 'text' || p.field.type === 'number'">
+            <span class="field-label">{{ 'annotation.fields.mask.label' | t }}</span>
+            <input type="text" [(ngModel)]="p.field.mask"
+              [placeholder]="'annotation.fields.mask.placeholder' | t" />
           </label>
           <label class="field field-small" *ngIf="p.field.type === 'number'">
             <span class="field-label">{{ 'annotation.fields.number.decimals.label' | t }}</span>
@@ -356,6 +374,11 @@
             <span class="field-label">{{ 'annotation.fields.number.appender.label' | t }}</span>
             <input type="text" [(ngModel)]="p.field.appender"
               [placeholder]="'annotation.fields.number.appender.placeholder' | t" />
+          </label>
+          <label class="field">
+            <span class="field-label">{{ 'annotation.fields.helperText.label' | t }}</span>
+            <input type="text" [(ngModel)]="p.field.helperText"
+              [placeholder]="'annotation.fields.helperText.placeholder' | t" />
           </label>
           <label class="field field-small">
             <span class="field-label">{{ 'annotation.fields.size.label' | t }}</span>
@@ -392,16 +415,34 @@
           </label>
           <label class="field">
             <span class="field-label">{{ 'annotation.fields.type.label' | t }}</span>
-            <select [(ngModel)]="e.field.type">
+            <select [(ngModel)]="e.field.type" (ngModelChange)="onFieldTypeChange('edit', $event)">
               <option value="text">{{ 'annotation.fields.type.options.text' | t }}</option>
               <option value="check">{{ 'annotation.fields.type.options.check' | t }}</option>
               <option value="radio">{{ 'annotation.fields.type.options.radio' | t }}</option>
               <option value="number">{{ 'annotation.fields.type.options.number' | t }}</option>
             </select>
           </label>
+          <label class="field" *ngIf="showPresetSelector(e.field.type)">
+            <span class="field-label">{{ 'annotation.fields.preset.label' | t }}</span>
+            <select [(ngModel)]="e.field.presetId" (ngModelChange)="onPresetChange('edit', $event)">
+              <option [ngValue]="null">{{ 'annotation.fields.preset.custom' | t }}</option>
+              <option *ngFor="let preset of getPresetsForType(e.field.type)" [ngValue]="preset.id">
+                {{ preset.labelKey | t }}
+              </option>
+            </select>
+          </label>
+          <small class="field-hint"
+            *ngIf="getPresetDescriptionKey(e.field.type, e.field.presetId) as editPresetDescription">
+            {{ editPresetDescription | t }}
+          </small>
           <label class="field">
             <span class="field-label">{{ 'annotation.fields.value.label' | t }}</span>
             <input type="text" [(ngModel)]="e.field.value" [placeholder]="'annotation.fields.value.placeholder' | t" />
+          </label>
+          <label class="field" *ngIf="e.field.type === 'text' || e.field.type === 'number'">
+            <span class="field-label">{{ 'annotation.fields.mask.label' | t }}</span>
+            <input type="text" [(ngModel)]="e.field.mask"
+              [placeholder]="'annotation.fields.mask.placeholder' | t" />
           </label>
           <label class="field field-small" *ngIf="e.field.type === 'number'">
             <span class="field-label">{{ 'annotation.fields.number.decimals.label' | t }}</span>
@@ -411,6 +452,11 @@
             <span class="field-label">{{ 'annotation.fields.number.appender.label' | t }}</span>
             <input type="text" [(ngModel)]="e.field.appender"
               [placeholder]="'annotation.fields.number.appender.placeholder' | t" />
+          </label>
+          <label class="field">
+            <span class="field-label">{{ 'annotation.fields.helperText.label' | t }}</span>
+            <input type="text" [(ngModel)]="e.field.helperText"
+              [placeholder]="'annotation.fields.helperText.placeholder' | t" />
           </label>
           <label class="field field-small">
             <span class="field-label">{{ 'annotation.fields.size.label' | t }}</span>
